[metadata]
name = rlnav
description = Reinforcement Learning for Navigation and Player/Designer Assistance
author = Batu Aytemiz
license = MIT
license_file = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python :: 3.7


[options]
packages =
    rlnav

install_requires =
    dgl-cuda11.1>=0.7.1
    wandb>=0.10.27
    prettytable>=2.1.0


python_requires = >=3.7
package_dir =
    =.
zip_safe = no
